--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -38,6 +38,11 @@
     <h3>Session time (mins up to 10)</h3>
     <div id="time-bar"></div>
     </section>   
+    <section>
+    <h3>Data Table</h3>
+    <table id="dc-data-table" class="table table-hover"></table>
+    </section>
+
  
     <script src='js/d3.min.js'></script>
     <script src='js/crossfilter.js'></script>
