--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -37,13 +37,16 @@
     <section>
     <h3>Session time (mins up to 10)</h3>
     <div id="time-bar"></div>
-    </section>   
+    </section> 
+    <section id="questions">
+    </section> 
     <section>
     <h3>Data Table</h3>
     <table id="dc-data-table" class="table table-hover"></table>
     </section>
 
  
+    <script src="js/jquery-2.1.4.min.js"></script>
     <script src='js/d3.min.js'></script>
     <script src='js/crossfilter.js'></script>
     <script src='js/dc.js'></script>
