--- a/web/dashboard/board.html
+++ b/web/dashboard/board.html
@@ -1,4 +1,4 @@
-<link rel='stylesheet prefetch' href='css/bootstrap.min.css'>
+<!--<link rel='stylesheet prefetch' href='css/bootstrap.min.css'>-->
 <link rel='stylesheet prefetch' href='css/dc.css'>
 <link rel='stylesheet prefetch' href='css/style.css'/> 
 
