--- a/web/dashboard/board.html
+++ b/web/dashboard/board.html
@@ -8,7 +8,7 @@
     <div id="complete-pie"></div>
     </section>
     <section>
-    <h3>Passesd assessment</h3>
+    <h3>Passed assessment</h3>
     <div id="passed-pie"></div>
     </section>
     <section>
