--- a/web/dashboard/board.html
+++ b/web/dashboard/board.html
@@ -16,6 +16,10 @@
     <div id="email-pie"></div>
     </section>
     <section>
+    <h3>Platform</h3>
+    <div id="platform-pie"></div>
+    </section>
+    <section>
     <h3>Portal</h3>
     <div id="theme-line"></div>
     </section>
